[gd_scene load_steps=14 format=3 uid="uid://b4yefkmdnfq3u"]

[ext_resource type="Theme" uid="uid://bmintbtqkb0y" path="res://ui/main_menu_ui.tres" id="1_wugym"]
[ext_resource type="Script" uid="uid://pmqxpd86848w" path="res://code/settings.gd" id="2_xoqwi"]
[ext_resource type="Texture2D" uid="uid://o5iimj1ic3w4" path="res://sprites/back_arrow.png" id="4_8m356"]

[sub_resource type="Gradient" id="Gradient_b2kbf"]
colors = PackedColorArray(0.494118, 0.145098, 0.32549, 1, 0, 0, 0, 1)
metadata/_snap_count = 2

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jhdi1"]
noise_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_288yy"]
width = 1920
height = 1080
color_ramp = SubResource("Gradient_b2kbf")
noise = SubResource("FastNoiseLite_jhdi1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rtres"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(960, 1, 1)
angle_min = 1.07288e-05
angle_max = 360.0
direction = Vector3(0, -100, 0)
spread = 0.0
initial_velocity_min = -200.0
initial_velocity_max = -200.0
gravity = Vector3(0, 0, 0)
turbulence_influence_min = 0.0
turbulence_initial_displacement_min = 1.49012e-06
turbulence_initial_displacement_max = 1.49012e-06
collision_mode = 1
collision_friction = 0.0
collision_bounce = 1.0

[sub_resource type="Gradient" id="Gradient_by04r"]
interpolation_mode = 1
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.737255, 0.607843, 0.0941176, 0.317647)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1x14a"]
gradient = SubResource("Gradient_by04r")
width = 32
height = 32

[sub_resource type="Gradient" id="Gradient_0nofg"]
interpolation_mode = 1
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.898039, 0, 0.898039, 0.352941)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u56ir"]
gradient = SubResource("Gradient_0nofg")
width = 32
height = 32

[sub_resource type="InputEventKey" id="InputEventKey_xane7"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_e2pvh"]
events = [SubResource("InputEventKey_xane7")]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_wugym")
script = ExtResource("2_xoqwi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("NoiseTexture2D_288yy")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(960, 0)
amount = 100
process_material = SubResource("ParticleProcessMaterial_rtres")
texture = SubResource("GradientTexture2D_1x14a")
lifetime = 6.0
speed_scale = 3.0
randomness = 1.0

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(960, 0)
amount = 100
process_material = SubResource("ParticleProcessMaterial_rtres")
texture = SubResource("GradientTexture2D_u56ir")
lifetime = 6.0
speed_scale = 3.0
randomness = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="volume_controls" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/volume_controls"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/volume_controls/VBoxContainer"]
layout_mode = 2
text = "master volume 100 / 100"

[node name="Master_volume" type="HSlider" parent="CenterContainer/volume_controls/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/volume_controls"]
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/volume_controls/VBoxContainer2"]
layout_mode = 2
text = "Death sfx 100 / 100"

[node name="death_volume" type="HSlider" parent="CenterContainer/volume_controls/VBoxContainer2"]
layout_mode = 2
value = 100.0

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/volume_controls"]
layout_mode = 2

[node name="Label3" type="Label" parent="CenterContainer/volume_controls/VBoxContainer3"]
layout_mode = 2
text = "Music volume 100 / 100"

[node name="music_volume" type="HSlider" parent="CenterContainer/volume_controls/VBoxContainer3"]
layout_mode = 2
value = 100.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 461.0
offset_bottom = 192.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_e2pvh")
text = "Back"
icon = ExtResource("4_8m356")
expand_icon = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 134.0
offset_right = 1828.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 32
text = "THIS DOESN'T DO ANYTHING RN
WILL CHANGE LATER <"
horizontal_alignment = 1

[connection signal="value_changed" from="CenterContainer/volume_controls/VBoxContainer/Master_volume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="CenterContainer/volume_controls/VBoxContainer2/death_volume" to="." method="_on_death_volume_value_changed"]
[connection signal="value_changed" from="CenterContainer/volume_controls/VBoxContainer3/music_volume" to="." method="_on_music_volume_value_changed"]
[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
